fix: fixed gap between dropdown and accordion and other styles

--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -4,9 +4,8 @@
     position: fixed;
     display: flex;
     flex-direction: column;
-    padding: 0px;
     gap: 4px;
-    width: 20%;
+    width: 15%;
     @media screen and (max-width: 1500px) {
         width: 25%;
       }
@@ -25,4 +24,8 @@ app-accordion, app-dropdown{
     right: 1px;
     height: 60px;
     background-color: lightcyan;
+}
+
+span{
+    height: 8px;
 }
